redesign table sorting and pagination
